# sparrow-proxy-service

./: Cargo.toml  Dockerfile  README.md  index.js  package-lock.json  package.json
.github/workflows/: development.yml  prod-test.yml  prod.yml  socket-test.yml  sparrowproxy-selfhost.yml  staging.yml  testing.yml
deploymentManifests/: deployment.yml
src/: app.controller.ts  app.module.ts  main.rs  main.ts
src/adapters/: custom-websocket-adapter.ts
src/enum/: httpRequest.enum.ts  httpResponseFormat.ts  testflow.enum.ts
src/payloads/: testflow.payload.ts
src/proxy/: proxy.gateway.ts  proxy.module.ts  proxy.service.ts
src/proxy/graphql/: graphql.controller.ts  graphql.module.ts  graphql.service.ts
src/proxy/http/: http.controller.ts  http.module.ts  http.service.ts
src/proxy/socket/: socket.gateway.ts  socket.service.ts
src/proxy/socketio/: dummy.gateway.ts  socketio.gateway.ts  socketio.module.ts  socketio.service.ts  websocket.service.ts
src/proxy/testflow/: testflow.controller.ts  testflow.module.ts  testflow.service.ts
src/proxy/websocket/: websocket.gateway.ts  websocket.module.ts  websocket.service.ts
src/utils/: base64Converter.ts  decode-testflow.ts
