[package]
name = "sparrow-proxy-service"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
    "multipart",
    "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
brotli = "3.3.0"